WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60984
[Qt] Fix tst_QWebFrame::getSetStaticProperty() autotest
https://bugs.webkit.org/show_bug.cgi?id=60984
Summary
[Qt] Fix tst_QWebFrame::getSetStaticProperty() autotest
Caio Marcelo de Oliveira Filho
Reported
2011-05-17 13:48:02 PDT
[Qt] Fix tst_QWebFrame::getSetStaticProperty() autotest
Attachments
Patch
(4.63 KB, patch)
2011-05-17 13:57 PDT
,
Caio Marcelo de Oliveira Filho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2011-05-17 13:57:51 PDT
Created
attachment 93813
[details]
Patch
Andreas Kling
Comment 2
2011-05-17 17:06:22 PDT
Comment on
attachment 93813
[details]
Patch r=me, though I wonder about other potential cases where we'd end up with an exception on the ExecState.
Caio Marcelo de Oliveira Filho
Comment 3
2011-05-18 06:51:11 PDT
(In reply to
comment #2
)
> (From update of
attachment 93813
[details]
) > r=me, though I wonder about other potential cases where we'd end up with an exception on the ExecState.
There are other potential cases, like value.toString. However, the conversion function is huge and I want clean it up before treating the other cases. I'm landing this since it fix the concrete reproducible (and important) case we have -- converting 'document' to 'QVariantMap'. We can improve the exception "cleaning" later.
WebKit Commit Bot
Comment 4
2011-05-18 07:13:08 PDT
Comment on
attachment 93813
[details]
Patch Clearing flags on attachment: 93813 Committed
r86758
: <
http://trac.webkit.org/changeset/86758
>
WebKit Commit Bot
Comment 5
2011-05-18 07:13:13 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 6
2011-05-19 13:35:58 PDT
Revision
r86758
cherry-picked into qtwebkit-2.2 with commit cace979 <
http://gitorious.org/webkit/qtwebkit/commit/cace979
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug